deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prompt-battle-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: prompt-battle
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prompt-battle
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - image: stringju/scg-prompt-battle-prod
        imagePullPolicy: Always
        name: prompt-battle
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /app/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: prompt-battle-data
