service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prompt-battle-service
spec:
  selector:
    app.kubernetes.io/name: prompt-battle
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
